--- a/charts/ms-apps/v1.0.0/templates/secrets/ms-license-n-key.yaml
+++ b/charts/ms-apps/v1.0.0/templates/secrets/ms-license-n-key.yaml
@@ -5,6 +5,6 @@ metadata:
   name: ms-license-key
 data:
   MetricStream_key.pub: |-
-    {{ .Files.Get "config/license-keys/metricstream-key.pub" | b64enc }}
+    {{ .Files.Get "config/license-keys/metricstream-key.pub" }}
   MetricStream_license.xml: |-
-    {{ .Files.Get "config/license-keys/metricstream-license.xml" | b64enc }}
+    {{ .Files.Get "config/license-keys/metricstream-license.xml" }}
