--- a/charts/ms-apps/v2.0.5.12/questions.yaml
+++ b/charts/ms-apps/v2.0.5.12/questions.yaml
@@ -31,24 +31,50 @@ questions:
   type: enum
   group: Resource Unit
   options:
-    - Small
-    - Medium
-    - Large
-    - Xlarge
+    - small
+    - medium
+    - large
+    - xlarge
   label: Select Resource Unit Size?
+  required: true
+- variable: imageCredentials.registry
+  default: https://index.docker.io/v1/
+  description: |
+    Container Registry
+  type: string
+  group: Container Login Credentials
+  label: Container Registry
   required: true
 - variable: imageCredentials.username
   default: metricstream
   description: |
-    User name for the docker private registry
+    Container Registry User name
   type: string
-  group: Docker Login Credentials
-  label: Docker Username
+  group: Container Login Credentials
+  label: Container Registry Username
   required: true
 - variable: imageCredentials.password
   description: |
-    Password for the docker private registry
+    Container Registry Password
   type: password
-  group: Docker Login Credentials
-  label: Docker Password
+  group: Container Login Credentials
+  label: Container Registry Password
   required: true
+- variable: logzio.url
+  default: https://listener.logz.io:8071
+  description: |
+    Logz.io Account URL
+  type: string
+  group: Logzio
+  label: Logz.io URL
+  required: true
+- variable: logzio.token
+  default: provide token here
+  description: |
+    Logz.io Account Token
+  type: string
+  group: Logzio
+  label: Logz.io Access Token
+  required: true
+
+
