--- a/charts/ms-apps/v2.0.5.12/templates/components/oracle.yaml
+++ b/charts/ms-apps/v2.0.5.12/templates/components/oracle.yaml
@@ -2,10 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: oracle
-  labels:
-    app: oracle
-    tier: db
-    role: master
 spec:
   ports:
     - name: oracle
@@ -24,66 +20,48 @@ spec:
   selector:
     matchLabels:
       app: oracle
-      tier: db
-      role: master
   template:
     metadata:
       name: oracle
       labels:
         app: oracle
-        tier: db
-        role: master
+        tier: persistent-tier
+        container_name: oracle
+        environment: {{ .Values.label.ENVIRONMENT }}
     spec:
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: kubernetes.io/hostname
-                operator: In
-                values:
-                - vmidoctest7
-      serviceAccountName: ms-unrestricted-psp
+      serviceAccountName: common-service-account
       volumes: 
       - name: data
         persistentVolumeClaim:
-          claimName: oracle
+          claimName: oracle-pvc
       - name: dshm
         emptyDir:
           medium: Memory
+      - name: fluentd-config
+        configMap:
+          name: oracle-fluentd-config
       containers:
       - name: oracle
         image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.ORACLE }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: ORACLE_MAX_MEM
-          {{- if (eq "Small" .Values.resourceUnit.size) }}
-          value: "{{ .Values.resourceUnit.small.memory.max.ORACLE }}"
-          {{- else if (eq "Medium" .Values.resourceUnit.size) }}
-          value: "{{ .Values.resourceUnit.medium.memory.max.ORACLE }}"
-          {{- else if (eq "Large" .Values.resourceUnit.size) }}
-          value: "{{ .Values.resourceUnit.large.memory.max.ORACLE }}"
-          {{- else if (eq "Xlarge" .Values.resourceUnit.size) }}
-          value: "{{ .Values.resourceUnit.xlarge.memory.max.ORACLE }}"
-          {{- end }}
+          valueFrom:
+            configMapKeyRef:
+              name: resource-config
+              key: ORACLE_MAX_MEM
         ports:
         - name: oracle
           containerPort: 1521
+        {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
         resources:
           limits:
-            {{- if (eq "Small" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.small.memory.max.ORACLE }}Mi
-            cpu: {{ .Values.resourceUnit.small.cpu.max.ORACLE }}m
-            {{- else if (eq "Medium" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.medium.memory.max.ORACLE }}Mi
-            cpu: {{ .Values.resourceUnit.medium.cpu.max.ORACLE }}m
-            {{- else if (eq "Large" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.large.memory.max.ORACLE }}Mi
-            cpu: {{ .Values.resourceUnit.large.cpu.max.ORACLE }}m
-            {{- else if (eq "Xlarge" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.xlarge.memory.max.ORACLE }}Mi
-            cpu: {{ .Values.resourceUnit.xlarge.cpu.max.ORACLE }}m
-            {{- end }}
+            memory: {{ .memory.max.ORACLE }}Mi
+            cpu: {{ .cpu.max.ORACLE }}m
+          requests:
+            memory: {{ .memory.max.ORACLE }}Mi
+            cpu: {{ .cpu.max.ORACLE }}m
+        {{- end }}
         volumeMounts:
         - mountPath: /data/oracle/oradata
           name: data
@@ -111,8 +89,73 @@ spec:
         - mountPath: /var/tmp
           name: data
           subPath: var_tmp
-        securityContext:
-          readOnlyRootFilesystem: true
+      - name: fluentd
+        image: {{ .Values.image.LOGZIO }}
+        env:
+        - name:  LOGZIO_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: logzio-token-secret
+              key: logzio-url
+        - name:  LOGZIO_URL
+          valueFrom:
+            secretKeyRef:
+              name: logzio-token-secret
+              key: logzio-token
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        - name: HOST_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
+        - name: POD_SERVICE_ACCOUNT_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.serviceAccountName
+        - name: POD_UNIQUE_ID
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.uid
+        - name: CONTAINER_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.labels['container_name']
+        - name: ENVIRONMENT
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.labels['environment']
+        - name: APP_TIER
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.labels['tier']
+        resources:
+          limits:
+            cpu: {{ .Values.logzio.cpu }}m
+            memory: {{ .Values.logzio.memory }}Mi
+          requests:
+            cpu: {{ .Values.logzio.cpu }}m
+            memory: {{ .Values.logzio.memory }}Mi
+        volumeMounts:
+        - name: fluentd-config
+          mountPath: /fluentd/etc/fluent.conf
+          subPath: fluent.conf
+        - name: data
+          mountPath: /opt/oracle/diag/rdbms/orcl
+          subPath: orcl
       imagePullSecrets:
       - name: container-registry-key
       securityContext:
