--- a/charts/ms-apps/v2.0.5.12/templates/rbac/common-rbc.yaml
+++ b/charts/ms-apps/v2.0.5.12/templates/rbac/common-rbc.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{.Release.Namespace}}-sa
+  name: common-service-account
   namespace: {{ .Release.Namespace }}
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: {{.Release.Namespace}}-cr
+  name: common-cr
   namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups:
@@ -24,18 +23,16 @@ rules:
   - list
   - watch
   - use
-
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: {{.Release.Namespace}}-crb
+  name: {{.Release.Namespace}}-common-crb
 roleRef:
   kind: ClusterRole
-  name: {{.Release.Namespace}}-cr
+  name: common-cr
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
-  name: {{.Release.Namespace}}-sa
+  name: common-service-account
   namespace: {{ .Release.Namespace }}
-
