--- a/charts/ms-apps/v2.0.5.12/templates/storage/oracle-pvc.yaml
+++ b/charts/ms-apps/v2.0.5.12/templates/storage/oracle-pvc.yaml
@@ -1,20 +1,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
- name: oracle
- annotations:
-   volume.beta.kubernetes.io/storage-class: ms-storage-class
+  name: oracle-pvc
+  annotations:
+    volume.beta.kubernetes.io/storage-class: ms-storage-class
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
+    {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
     requests:
-      {{- if (eq "Small" .Values.resourceUnit.size) }}
-      storage: {{ .Values.resourceUnit.small.storage.size.ORACLE }}Gi
-      {{- else if (eq "Medium" .Values.resourceUnit.size) }}
-      storage: {{ .Values.resourceUnit.medium.storage.size.ORACLE }}Gi
-      {{- else if (eq "Large" .Values.resourceUnit.size) }}
-      storage: {{ .Values.resourceUnit.large.storage.size.ORACLE }}Gi
-      {{- else if (eq "Xlarge" .Values.resourceUnit.size) }}
-      storage: {{ .Values.resourceUnit.xlarge.storage.size.ORACLE }}Gi
-      {{- end }}
+      storage: {{ .storage.size.ORACLE }}Gi
+    {{- end }}
