--- a/charts/ms-apps/v1.0.0/templates/components/elasticsearch.yaml
+++ b/charts/ms-apps/v1.0.0/templates/components/elasticsearch.yaml
@@ -41,20 +41,12 @@ spec:
       - name: elasticsearch
         image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.ELASTICSEARCH }}
         imagePullPolicy: IfNotPresent
+        {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
         env:
-        - name: ES_JAVA_OPTS
-          {{- if (eq "Small" .Values.resourceUnit.size) }}
-          value: -Xms512m -Xmx{{ .Values.resourceUnit.small.memory.max.ELASTICSEARCH }}m
-          {{- else if (eq "Medium" .Values.resourceUnit.size) }}
-          value: -Xms512m -Xmx{{ .Values.resourceUnit.medium.memory.max.ELASTICSEARCH }}m
-          {{- else if (eq "Large" .Values.resourceUnit.size) }}
-          value: -Xms512m -Xmx{{ .Values.resourceUnit.large.memory.max.ELASTICSEARCH }}m
-          {{- else if (eq "Xlarge" .Values.resourceUnit.size) }}
-          value: -Xms512m -Xmx{{ .Values.resourceUnit.xlarge.memory.max.ELASTICSEARCH }}m
-          {{- end }}
+        - name: ES_MAX_MEM
+          value: {{ .memory.max.ELASTICSEARCH }}m
         - name: processors
           value: "1"
-        {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
         resources:
           limits:
             memory: {{ .memory.max.ELASTICSEARCH }}Mi
