--- a/charts/ms-apps/v1.0.0/templates/components/elasticsearch.yaml
+++ b/charts/ms-apps/v1.0.0/templates/components/elasticsearch.yaml
@@ -40,7 +40,7 @@ spec:
       containers:
       - name: elasticsearch
         image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.ELASTICSEARCH }}
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
         env:
         - name: ES_MAX_MEM
