--- a/charts/ms-apps/v1.0.0/templates/components/mongo.yaml
+++ b/charts/ms-apps/v1.0.0/templates/components/mongo.yaml
@@ -40,7 +40,7 @@ spec:
       containers:
       - name: mongo
         image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.MONGO }}
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
         resources:
           limits:
