--- a/charts/ms-apps/v4.0.0/templates/components/activemq.yaml
+++ b/charts/ms-apps/v4.0.0/templates/components/activemq.yaml
@@ -9,14 +9,14 @@ spec:
       port: 61616
       targetPort: 61616
   selector:
-    app: activemq-deployment
+    app: activemq
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: activemq-deployment
 spec:
-  replicas: 0
+  replicas: 1
   selector:
     matchLabels:
       app: activemq
