--- a/charts/ms-apps/v4.0.0/templates/components/elasticsearch.yaml
+++ b/charts/ms-apps/v4.0.0/templates/components/elasticsearch.yaml
@@ -1,88 +1,87 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: activemq-service
+  name: elasticsearch-service
 spec:
   ports:
-    - name: activemq-service-port
+    - name: elasticsearch-service-port
       protocol: TCP
-      port: 61616
-      targetPort: 61616
+      port: 9300
+      targetPort: 9300
   selector:
-    app: activemq-deployment
+    app: elasticsearch
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: activemq-deployment
+  name: elasticsearch-deployment
 spec:
-  replicas: 0
+  replicas: 1
   selector:
     matchLabels:
-      app: activemq
+      app: elasticsearch
   template:
     metadata:
-      name: activemq
+      name: elasticsearch
       labels:
-        app: activemq
-        tier: message-queue
-        container_name: activemq
-        environment: {{ .Values.label.ENVIRONMENT }}
+        app: elasticsearch
+        tier: persitent-tier
+        container_name: elasticsearch
+        environment: {{ .Values.label.ENVIRONMENT }}        
     spec:
       serviceAccountName: common-service-account
       volumes:
-      - name: activemq-data-volume
+      - name: elasticsearch-data-volume
         persistentVolumeClaim:
-          claimName: activemq-persistent-volume-claim
-      - name: activemq-fluentd-configmap-volume
+          claimName: elasticsearch-persistent-volume-claim
+      - name: elasticsearch-fluentd-config-volume
         configMap:
-          name: activemq-fluentd-configmap
-      - name: activemq-configuration-configmap-volume
+          name: elasticsearch-fluentd-configmap
+      - name: elasticsearch-configuration-configmap-volume
         configMap:
-          name: activemq-configuration-configmap
+          name: elasticsearch-configuration-configmap
       containers:
-      - name: activemq-container
-        image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.ACTIVEMQ }}
+      - name: elasticsearch-container
+        image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.ELASTICSEARCH }}
         imagePullPolicy: IfNotPresent
-        ports:
-        - name: activemq-port
-          containerPort: 61616
-        env:
-        - name: ACTIVEMQ_MAX_MEM
-          valueFrom:
-            configMapKeyRef:
-              name: resource-unit-configmap
-              key: ACTIVEMQ_MAX_MEM
         {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
+        env:
+        - name: ES_MAX_MEM
+          value: {{ .memory.max.ELASTICSEARCH }}m
+        - name: processors
+          value: "1"
         resources:
           limits:
-            memory: {{ .memory.max.ACTIVEMQ }}Mi
-            cpu: {{ .cpu.max.ACTIVEMQ }}m
+            memory: {{ .memory.max.ELASTICSEARCH }}Mi
+            cpu: {{ .cpu.max.ELASTICSEARCH }}m
           requests:
-            memory: {{ .memory.max.ACTIVEMQ }}Mi
-            cpu: {{ .cpu.max.ACTIVEMQ }}m
+            memory: {{ .memory.max.ELASTICSEARCH }}Mi
+            cpu: {{ .cpu.max.ELASTICSEARCH }}m
         {{- end }}
         volumeMounts:
-        - mountPath: /opt/activemq/data
-          name: activemq-data-volume
-          subPath: activemq
-        - mountPath: /opt/activemq/conf/log4j.properties
-          name: activemq-configuration-configmap-volume
-          subPath: log4j.properties
-        - mountPath: /opt/activemq/conf/jetty.xml
-          name: activemq-configuration-configmap-volume
-          subPath: jetty.xml
-        - mountPath: /opt/activemq/conf/activemq.xml
-          name: activemq-configuration-configmap-volume
-          subPath: activemq.xml
-        - mountPath: /opt/activemq/tmp
-          name: activemq-data-volume
-          subPath: activemq_tmp
+        - mountPath: /data/elasticsearch
+          name: elasticsearch-data-volume
+          subPath: elasticsearch
+        - mountPath: /usr/share/elasticsearch/data
+          name: elasticsearch-data-volume
+          subPath: data
+        - mountPath: /usr/share/elasticsearch/config/logging.yml
+          name: elasticsearch-configuration-configmap-volume
+          subPath: logging.yml
+        - mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
+          name: elasticsearch-configuration-configmap-volume
+          subPath: elasticsearch.yml
+        - mountPath: /usr/share/elasticsearch/logs
+          name: elasticsearch-data-volume
+          subPath: logs
         - mountPath: /tmp
-          name: activemq-data-volume
+          name: elasticsearch-data-volume
           subPath: tmp
         securityContext:
           readOnlyRootFilesystem: true
+        ports:
+        - name: es-port
+          containerPort: 9300
       - name: fluentd-container
         image: {{ .Values.image.LOGZIO }}
         env:
@@ -136,18 +135,6 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.labels['tier']
-        - name: CONTAINER_NAME
-          value: activemq
-        - name: NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-        - name: POD_NAME
-          value: activemq
-        - name: NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
         resources:
           limits:
             cpu: {{ .Values.logzio.cpu }}m
@@ -156,14 +143,14 @@ spec:
             cpu: {{ .Values.logzio.cpu }}m
             memory: {{ .Values.logzio.memory }}Mi
         volumeMounts:
-        - name: activemq-fluentd-configmap-volume
+        - name: elasticsearch-fluentd-config-volume
           mountPath: /fluentd/etc/fluent.conf
           subPath: fluent.conf
-        - name: activemq-data-volume
-          mountPath: /opt/activemq/data
-          subPath: activemq
+        - name: elasticsearch-data-volume
+          mountPath: /usr/share/elasticsearch/logs
+          subPath: logs
       imagePullSecrets:
-        - name: container-registry-key-secret
+      - name: container-registry-key-secret
       securityContext:
         runAsUser: 1000
         runAsNonRoot: true
