--- a/charts/ms-apps/v4.0.0/templates/components/mongo.yaml
+++ b/charts/ms-apps/v4.0.0/templates/components/mongo.yaml
@@ -1,88 +1,78 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: activemq-service
+  name: mongodb-service
 spec:
   ports:
-    - name: activemq-service-port
+    - name: mongodb-service-port
       protocol: TCP
-      port: 61616
-      targetPort: 61616
+      port: 27017
+      targetPort: 27017
   selector:
-    app: activemq-deployment
+    app: mongodb
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: activemq-deployment
+  name: mongodb-deployment
 spec:
-  replicas: 0
+  replicas: 1
   selector:
     matchLabels:
-      app: activemq
+      app: mongodb
   template:
     metadata:
-      name: activemq
+      name: mongodb
       labels:
-        app: activemq
-        tier: message-queue
-        container_name: activemq
+        app: mongodb
+        tier: persistent-tier
+        container_name: mongodb
         environment: {{ .Values.label.ENVIRONMENT }}
     spec:
       serviceAccountName: common-service-account
       volumes:
-      - name: activemq-data-volume
+      - name: mongodb-data-volume
         persistentVolumeClaim:
-          claimName: activemq-persistent-volume-claim
-      - name: activemq-fluentd-configmap-volume
+          claimName: mongodb-persistent-volume-claim
+      - name: mongodb-fluentd-config-volume
         configMap:
-          name: activemq-fluentd-configmap
-      - name: activemq-configuration-configmap-volume
-        configMap:
-          name: activemq-configuration-configmap
+          name: mongodb-fluentd-configmap
       containers:
-      - name: activemq-container
-        image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.ACTIVEMQ }}
-        imagePullPolicy: IfNotPresent
-        ports:
-        - name: activemq-port
-          containerPort: 61616
+      - name: mongodb-container
+        image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.MONGO }}
         env:
-        - name: ACTIVEMQ_MAX_MEM
+        - name:  MONGO_MS_PASSWORD
           valueFrom:
-            configMapKeyRef:
-              name: resource-unit-configmap
-              key: ACTIVEMQ_MAX_MEM
+            secretKeyRef:
+              name: mongodb-password-secret
+              key: mongo-pwd
+        imagePullPolicy: IfNotPresent
         {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
         resources:
           limits:
-            memory: {{ .memory.max.ACTIVEMQ }}Mi
-            cpu: {{ .cpu.max.ACTIVEMQ }}m
+            memory: {{ .memory.max.MONGO }}Mi
+            cpu: {{ .cpu.max.MONGO }}m
           requests:
-            memory: {{ .memory.max.ACTIVEMQ }}Mi
-            cpu: {{ .cpu.max.ACTIVEMQ }}m
+            memory: {{ .memory.max.MONGO }}Mi
+            cpu: {{ .cpu.max.MONGO }}m
         {{- end }}
         volumeMounts:
-        - mountPath: /opt/activemq/data
-          name: activemq-data-volume
-          subPath: activemq
-        - mountPath: /opt/activemq/conf/log4j.properties
-          name: activemq-configuration-configmap-volume
-          subPath: log4j.properties
-        - mountPath: /opt/activemq/conf/jetty.xml
-          name: activemq-configuration-configmap-volume
-          subPath: jetty.xml
-        - mountPath: /opt/activemq/conf/activemq.xml
-          name: activemq-configuration-configmap-volume
-          subPath: activemq.xml
-        - mountPath: /opt/activemq/tmp
-          name: activemq-data-volume
-          subPath: activemq_tmp
+        - mountPath: /data/db
+          name: mongodb-data-volume
+          subPath: db_empty
         - mountPath: /tmp
-          name: activemq-data-volume
+          name: mongodb-data-volume
           subPath: tmp
+        - mountPath: /var/log/mongodb
+          name: mongodb-data-volume
+          subPath: mongodb
         securityContext:
+          runAsUser: 999
+          allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
+        ports:
+        - name: mongodb-port
+          containerPort: 27017
       - name: fluentd-container
         image: {{ .Values.image.LOGZIO }}
         env:
@@ -136,18 +126,6 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.labels['tier']
-        - name: CONTAINER_NAME
-          value: activemq
-        - name: NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-        - name: POD_NAME
-          value: activemq
-        - name: NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
         resources:
           limits:
             cpu: {{ .Values.logzio.cpu }}m
@@ -156,16 +134,17 @@ spec:
             cpu: {{ .Values.logzio.cpu }}m
             memory: {{ .Values.logzio.memory }}Mi
         volumeMounts:
-        - name: activemq-fluentd-configmap-volume
+        - name: mongodb-fluentd-config-volume
           mountPath: /fluentd/etc/fluent.conf
           subPath: fluent.conf
-        - name: activemq-data-volume
-          mountPath: /opt/activemq/data
-          subPath: activemq
+        - name: mongodb-data-volume
+          mountPath: /var/log/mongodb
+          subPath: mongodb
+        securityContext:
+          runAsUser: 1000
       imagePullSecrets:
-        - name: container-registry-key-secret
+      - name: container-registry-key-secret
       securityContext:
-        runAsUser: 1000
         runAsNonRoot: true
-        fsGroup: 1000
+        fsGroup: 999
       allowedCapabilities: null
