--- a/charts/ms-apps/v4.0.0/templates/components/oracle.yaml
+++ b/charts/ms-apps/v4.0.0/templates/components/oracle.yaml
@@ -1,88 +1,95 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: activemq-service
+  name: oracle-service
 spec:
   ports:
-    - name: activemq-service-port
+    - name: oracle-service-port
       protocol: TCP
-      port: 61616
-      targetPort: 61616
+      port: 1521
+      targetPort: 1521
   selector:
-    app: activemq-deployment
+    app: oracle
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: activemq-deployment
+  name: oracle-deployment
 spec:
   replicas: 0
   selector:
     matchLabels:
-      app: activemq
+      app: oracle
   template:
     metadata:
-      name: activemq
+      name: oracle
       labels:
-        app: activemq
-        tier: message-queue
-        container_name: activemq
+        app: oracle
+        tier: persistent-tier
+        container_name: oracle
         environment: {{ .Values.label.ENVIRONMENT }}
     spec:
       serviceAccountName: common-service-account
-      volumes:
-      - name: activemq-data-volume
+      volumes: 
+      - name: oracle-data-volume
         persistentVolumeClaim:
-          claimName: activemq-persistent-volume-claim
-      - name: activemq-fluentd-configmap-volume
+          claimName: oracle-persistent-volume-claim
+      - name: oracle-dshm-volume
+        emptyDir:
+          medium: Memory
+          sizeLimit: "4096Mi"
+      - name: oracle-fluentd-config-volume
         configMap:
-          name: activemq-fluentd-configmap
-      - name: activemq-configuration-configmap-volume
-        configMap:
-          name: activemq-configuration-configmap
+          name: oracle-fluentd-configmap
       containers:
-      - name: activemq-container
-        image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.ACTIVEMQ }}
+      - name: oracle-container
+        image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.ORACLE }}
         imagePullPolicy: IfNotPresent
-        ports:
-        - name: activemq-port
-          containerPort: 61616
         env:
-        - name: ACTIVEMQ_MAX_MEM
+        - name: ORACLE_MAX_MEM
           valueFrom:
             configMapKeyRef:
               name: resource-unit-configmap
-              key: ACTIVEMQ_MAX_MEM
+              key: ORACLE_MAX_MEM
+        ports:
+        - name: oracle-port
+          containerPort: 1521
         {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
         resources:
           limits:
-            memory: {{ .memory.max.ACTIVEMQ }}Mi
-            cpu: {{ .cpu.max.ACTIVEMQ }}m
+            memory: {{ .memory.max.ORACLE }}Mi
+            cpu: {{ .cpu.max.ORACLE }}m
           requests:
-            memory: {{ .memory.max.ACTIVEMQ }}Mi
-            cpu: {{ .cpu.max.ACTIVEMQ }}m
+            memory: {{ .memory.max.ORACLE }}Mi
+            cpu: {{ .cpu.max.ORACLE }}m
         {{- end }}
         volumeMounts:
-        - mountPath: /opt/activemq/data
-          name: activemq-data-volume
-          subPath: activemq
-        - mountPath: /opt/activemq/conf/log4j.properties
-          name: activemq-configuration-configmap-volume
-          subPath: log4j.properties
-        - mountPath: /opt/activemq/conf/jetty.xml
-          name: activemq-configuration-configmap-volume
-          subPath: jetty.xml
-        - mountPath: /opt/activemq/conf/activemq.xml
-          name: activemq-configuration-configmap-volume
-          subPath: activemq.xml
-        - mountPath: /opt/activemq/tmp
-          name: activemq-data-volume
-          subPath: activemq_tmp
+        - mountPath: /data/oracle/oradata
+          name: oracle-data-volume
+          subPath: oradata
+        - mountPath: /dev/shm
+          name: oracle-dshm-volume
+        - mountPath: /opt/oracle/product/12.2.0.1/dbhome_1/network/admin
+          name: oracle-data-volume
+          subPath: admin
+        - mountPath: /opt/oracle/admin/orcl/adump
+          name: oracle-data-volume
+          subPath: adump
+        - mountPath: /opt/oracle/product/12.2.0.1/dbhome_1/dbs
+          name: oracle-data-volume
+          subPath: dbs
+        - mountPath: /opt/oracle/diag/rdbms/orcl
+          name: oracle-data-volume
+          subPath: orcl
+        - mountPath: /opt/oracle/product/12.2.0.1/dbhome_1/rdbms/log
+          name: oracle-data-volume
+          subPath: log
         - mountPath: /tmp
-          name: activemq-data-volume
+          name: oracle-data-volume
           subPath: tmp
-        securityContext:
-          readOnlyRootFilesystem: true
+        - mountPath: /var/tmp
+          name: oracle-data-volume
+          subPath: var_tmp
       - name: fluentd-container
         image: {{ .Values.image.LOGZIO }}
         env:
@@ -136,18 +143,6 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.labels['tier']
-        - name: CONTAINER_NAME
-          value: activemq
-        - name: NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-        - name: POD_NAME
-          value: activemq
-        - name: NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
         resources:
           limits:
             cpu: {{ .Values.logzio.cpu }}m
@@ -156,16 +151,16 @@ spec:
             cpu: {{ .Values.logzio.cpu }}m
             memory: {{ .Values.logzio.memory }}Mi
         volumeMounts:
-        - name: activemq-fluentd-configmap-volume
+        - name: oracle-fluentd-config-volume
           mountPath: /fluentd/etc/fluent.conf
           subPath: fluent.conf
-        - name: activemq-data-volume
-          mountPath: /opt/activemq/data
-          subPath: activemq
+        - name: oracle-data-volume
+          mountPath: /opt/oracle/diag/rdbms/orcl
+          subPath: orcl
       imagePullSecrets:
-        - name: container-registry-key-secret
+      - name: container-registry-key-secret
       securityContext:
-        runAsUser: 1000
+        runAsUser: 54321
         runAsNonRoot: true
-        fsGroup: 1000
+        fsGroup: 54321
       allowedCapabilities: null
