--- a/charts/ms-apps/v6.0.0/config/logstash/logstash.conf
+++ b/charts/ms-apps/v6.0.0/config/logstash/logstash.conf
@@ -1,7 +1,7 @@
 input {
     jdbc {
         jdbc_validate_connection => true
-        jdbc_connection_string => "jdbc:oracle:thin:@oracle:1521/orcl"
+        jdbc_connection_string => "jdbc:oracle:thin:@oracle-service:1521/orcl"
         jdbc_user => "METRICSTREAM"
         jdbc_password => "password"
         jdbc_driver_library => "/usr/share/logstash/ojdbc6.jar"
