--- a/charts/ms-apps/v6.0.0/templates/network-policy/datarouter.yaml
+++ b/charts/ms-apps/v6.0.0/templates/network-policy/datarouter.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: datarouter
+      app: datarouter-test
   policyTypes:
   - Ingress
   - Egress
