--- a/charts/ms-apps/v6.0.0/templates/network-policy/tomcat.yaml
+++ b/charts/ms-apps/v6.0.0/templates/network-policy/tomcat.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: tomcat
+      app: tomcat-test
   policyTypes:
   - Ingress
   - Egress
